feat: add create user controller swagger spec and createdAt, updatedAt properties in user service
